2024-01-14T01:18:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7516056878 # 21
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-14
* notice: last 14d: unq all: 169 311
* notice: prev accum: outdated-unq outdated-all / unq all: 2185 6067 / 2426 6416
* notice: next accum: outdated-unq outdated-all / unq all: 2211 6105 / 2426 6416
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-30] / []

2024-01-13T16:19:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7513541330 # 20
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-13
* notice: last 14d: unq all: 176 321
* notice: prev accum: outdated-unq outdated-all / unq all: 2185 6067 / 2421 6410
* notice: next accum: outdated-unq outdated-all / unq all: 2185 6067 / 2426 6416
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -7 -11 / +15 +18 -0 -0 / 15 18
* notice: removed / changed dates: [] / [2023-12-30 2024-01-13]

2024-01-13T08:19:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7511303277 # 19
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-13
* notice: last 14d: unq all: 177 326
* notice: prev accum: outdated-unq outdated-all / unq all: 2185 6067 / 2411 6398
* notice: next accum: outdated-unq outdated-all / unq all: 2185 6067 / 2421 6410
* notice: prev exec diff / last date diff / accum: unq all: +10 +12 -10 -17 / +10 +12 -0 -0 / 10 12
* notice: removed / changed dates: [] / [2023-12-30 2024-01-13]

2024-01-13T01:12:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7509261680 # 18