@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2024-01-14T16:19:53Z",
+  "count" : 9,
+  "count_minmax" : [ 9, 9 ],
+  "count_decinc" : [ -0, +9 ],
+  "uniques" : 7,
+  "uniques_minmax" : [ 7, 7 ],
+  "uniques_decinc" : [ -0, +7 ]
+}
