@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-14T01:18:45Z",
-  "count_outdated" : 6105,
-  "uniques_outdated" : 2211,
-  "count" : 6416,
-  "uniques" : 2426,
+  "timestamp" : "2024-01-14T16:19:53Z",
+  "count_outdated" : 6108,
+  "uniques_outdated" : 2213,
+  "count" : 6425,
+  "uniques" : 2433,
   "clones" : [
-    {
-      "timestamp": "2023-12-31T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-01-01T00:00:00Z",
       "count": 13,
@@ -130,6 +121,15 @@
       "uniques": 15,
       "uniques_minmax": [ 10, 15 ],
       "uniques_decinc": [ 0, 15 ]
+    },
+    {
+      "timestamp": "2024-01-14T00:00:00Z",
+      "count": 9,
+      "count_minmax": [ 9, 9 ],
+      "count_decinc": [ 0, 9 ],
+      "uniques": 7,
+      "uniques_minmax": [ 7, 7 ],
+      "uniques_decinc": [ 0, 7 ]
     }
   ]
 }
