@@ -1,12 +1,7 @@
 {
-  "count": 311,
-  "uniques": 169,
+  "count": 317,
+  "uniques": 174,
   "clones": [
-    {
-      "timestamp": "2023-12-31T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-01-01T00:00:00Z",
       "count": 13,
@@ -71,6 +66,11 @@
       "timestamp": "2024-01-13T00:00:00Z",
       "count": 18,
       "uniques": 15
+    },
+    {
+      "timestamp": "2024-01-14T00:00:00Z",
+      "count": 9,
+      "uniques": 7
     }
   ]
 }
